# Borntraeger-task-C-

./: CMakeLists.txt  vcpkg.json
src/: main.cpp
